# dev-iric-solver

./: .gitattributes  .gitignore  isol_dev.toml
isol_dev/: README.md  pyproject.toml
isol_dev/isol_dev/: __init__.py  build.py  cli.py  config.py  init.py  test.py
isol_dev/isol_dev.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
isol_dev/isol_dev/templates/: definition.xml  isol_dev.toml  main.py
sample_cgns/: Case1.cgn  Case1_input.cgn  consoleLog.txt  project.xml
sample_cgns/subwindows/: preprocessor.xml
src/: README  asc_reader.py  cgns_writer.py  config_reader.py  definition.xml  grouping.py  main.py  models.py  translation_ja_JP.ts
tests/: README.md  config.toml  run_solver.py
